logs/seash.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/seash'...
Compiling './lib/python3.5/site-packages/seash/command_callbacks.py'...
***   File "./lib/python3.5/site-packages/seash/command_callbacks.py", line 168
    print longname, seash_global_variables.vesselinfo[longname]['information']
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seash/seash.py'...
***   File "./lib/python3.5/site-packages/seash/seash.py", line 183
    except Exception, error:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seash/seash_dictionary.py'...
***   File "./lib/python3.5/site-packages/seash/seash_dictionary.py", line 110
    print current_help_text.strip()
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seash/seash_helper.py'...
***   File "./lib/python3.5/site-packages/seash/seash_helper.py", line 113
    print 'Time update failed, could not connect to any time servers...'
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seash/seash_modules.py'...
***   File "./lib/python3.5/site-packages/seash/seash_modules.py", line 97
    except seash_exceptions.ModuleImportError, e:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/seash-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
